<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:padding="14dp"
  android:background="@color/white"
  >
  <TextView
    android:id="@+id/recipe"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/today_recipe"
    android:textColor="@color/baby"
    android:textSize="20sp"
    android:textStyle="bold"

    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" />

  <View
    android:id="@+id/line"
    android:layout_width="match_parent"
    android:layout_height="4dp"
    android:layout_alignLeft="@+id/recipe"
    android:layout_alignRight="@+id/recipe"
    android:layout_below="@+id/recipe"
    android:layout_marginTop="5dp"
    android:background="@color/line" />
  <ImageView
    android:src="@drawable/next"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:id="@+id/recipe_next"
    android:onClick="recordRecipeAndRemark"/>

  <TextView
    android:text="@string/breakfast_item"
    android:textSize="14sp"
    android:id="@+id/breakfast"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/line"
    android:layout_marginTop="20dp"/>

  <TextView
    android:text="@string/lunch_item"
    android:id="@+id/lunch"
    android:textSize="14sp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/breakfast"
    android:layout_marginTop="14dp"/>

  <TextView
    android:text="@string/dinner_item"
    android:textSize="14sp"
    android:id="@+id/dinner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/lunch"
    android:layout_marginTop="14dp"/>

  <TextView
    android:text="@string/add_item"
    android:textSize="14sp"
    android:id="@+id/add"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/dinner"
    android:layout_marginTop="14dp"/>

</RelativeLayout>
