<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white"
  android:orientation="vertical"
  android:paddingLeft="30dp"
  android:paddingRight="30dp">

  <TextView
    android:text="登录"
    android:textSize="20sp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize" />

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="80dp">

    <android.support.v7.widget.AppCompatImageView
      android:layout_width="50dp"
      android:layout_height="50dp"
      android:layout_centerInParent="true"
      android:src="@drawable/ic_account_circle_black_24dp" />
  </RelativeLayout>


  <android.support.design.widget.TextInputLayout
    android:id="@+id/login_username"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:textColorHint="@color/hint"
    android:textColor="@color/black_textcolor">

    <android.support.design.widget.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/username"
      android:inputType="number"
      android:maxLines="1"
     />
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/login_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:textColorHint="@color/hint"
    android:textColor="@color/black_textcolor">

    <android.support.design.widget.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:maxLines="1"
      />
  </android.support.design.widget.TextInputLayout>

  <Button
    android:id="@+id/login_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:background="@color/bt_default"
    android:text="@string/login_bt"
    android:textColor="@color/white"
    android:enabled="false"/>

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_marginTop="40dp"
    android:padding="5dp">

    <TextView
      android:id="@+id/login_new_user"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/new_user"
      android:textColor="@color/appbar_bg"
      android:textSize="14sp" />

    <TextView
      android:id="@+id/login_forget"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentRight="true"
      android:text="@string/forget_pwd"
      android:textColor="@color/appbar_bg"
      android:textSize="14sp" />
  </RelativeLayout>
</LinearLayout>
